[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pyxas"
version = "0.0.1"

authors = [
    { name="Christian Dewey", email="cdewey@udel.edu" }
    ]

description = "A package for processing XAS data"
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
]